--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -109,15 +109,16 @@
                                 <DataGridTextColumn Header="序号" Width="80" Binding="{Binding Code}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品名" Width="80" Binding="{Binding NewName}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="产地" Width="80" Binding="{Binding Place}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="响应值1" Width="80"></DataGridTextColumn>
-                                <DataGridTextColumn Header="响应值2" Width="80"></DataGridTextColumn>
-                                <DataGridTextColumn Header="响应值3" Width="80"></DataGridTextColumn>
-                                <DataGridTextColumn Header="平均值" Width="80"></DataGridTextColumn>
+                                <DataGridTextColumn Header="响应值1" Width="80" Binding="{Binding ResponseValue1}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="响应值2" Width="80" Binding="{Binding ResponseValue2}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="响应值3" Width="80" Binding="{Binding ResponseValue3}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="平均值" Width="80" Binding="{Binding AverageValue}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="汞浓度mg/L" Width="80" Binding="{Binding Density}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品重量g" Width="80" Binding="{Binding Weight}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品消化液总体积ml" Width="80"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品中汞.." Width="80"></DataGridTextColumn>
-                                <DataGridComboBoxColumn x:Name="standardCombo" Header="选择标样" Width="80" SelectedItemBinding="{Binding Path=CategoryName}">
+                                <!--
+                                <DataGridComboBoxColumn x:Name="standardCmb" Header="选择标样" Width="80" SelectedItemBinding="{Binding Path=CategoryName}">
                                     <DataGridComboBoxColumn.ItemsSource>
                                         <col:ArrayList>
                                             <sys:String>s1001</sys:String>
@@ -127,6 +128,27 @@
                                         </col:ArrayList>
                                     </DataGridComboBoxColumn.ItemsSource>
                                 </DataGridComboBoxColumn>
+                                -->
+                                <DataGridTemplateColumn Header="选择标样">
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <ComboBox x:Name="standardCmb" SelectionChanged="standardCmb_SelectionChanged" 
+                                                      ItemsSource="{Binding ItemsSource, ElementName=standardSampleDgd}"
+                                                      DisplayMemberPath="Code" SelectedValuePath="Code">
+                                                <!--
+                                                <ComboBox.ItemsSource>
+                                                    <col:ArrayList>
+                                                        <sys:String>s1001</sys:String>
+                                                        <sys:String>s1002</sys:String>
+                                                        <sys:String>s1003</sys:String>
+                                                        <sys:String>s1004</sys:String>
+                                                    </col:ArrayList>
+                                                </ComboBox.ItemsSource>
+                                                -->
+                                            </ComboBox>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
                                 <DataGridTextColumn Header="..." Width="80"></DataGridTextColumn>
                                 <DataGridTextColumn Header="..." Width="80"></DataGridTextColumn>
                                 <DataGridTextColumn Header="..." Width="80"></DataGridTextColumn>
@@ -145,7 +167,7 @@
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="序号" Width="80" Binding="{Binding Path=Code}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品名" Width="80" Binding="{Binding Path=SampleName}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="汞浓度" Width="80" Binding="{Binding Path=Density}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="汞浓度" Width="80" Binding="{Binding Path=Density,Mode=TwoWay}" ></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品重量" Width="80" Binding="{Binding Path=Weight}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品供应商" Width="80" Binding="{Binding Path=ProviderCompany}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="产地" Width="80" Binding="{Binding Path=Place}"></DataGridTextColumn>
@@ -158,8 +180,10 @@
                 </TabItem>
             </TabControl>
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="100">
-                <Button x:Name="AddRowBtn" Height="20" Padding="1" Margin="900,1,1,70" RenderTransformOrigin="0.643,-0.85" Content="增加" Click="AddRowBtn_Click" />
+                <Button x:Name="modifyBtn" Height="20" Content="修改" Margin="20,1,0,70" Click="modifyBtn_Click" />
+                <Button x:Name="AddRowBtn" Height="20" Padding="1" Margin="800,1,1,70" RenderTransformOrigin="0.643,-0.85" Content="增加" Click="AddRowBtn_Click" />
                 <Button x:Name="DelRowBtn" Height="20" Content="删除" Margin="20,1,0,70" Click="DelRowBtn_Click" />
+                
             </StackPanel>
             <GroupBox x:Name="paramGbx" Header="y = ax + b" Height="100" DockPanel.Dock="Top" Margin="0,2,308,0">
                 <GroupBox.Background>
@@ -167,9 +191,9 @@
                 </GroupBox.Background>
                 <DockPanel HorizontalAlignment="Left" Height="90" LastChildFill="False" Margin="0,0,-2,-12" VerticalAlignment="Top" Width="674">
                     <Label Content="截距" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center"/>
-                    <TextBox Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
+                    <TextBox x:Name="bTxb" Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
                     <Label Content="斜率" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center"/>
-                    <TextBox Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
+                    <TextBox x:Name="aTxb" Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
                     <Label Content="相关系数" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center"/>
                     <TextBox Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
                 </DockPanel>
